methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:7: error: ')' expected but ';' found.
  while (!(estSurBiscuit();) ) 
                          ^SlugTracking:7: error: illegal start of statement
  while (!(estSurBiscuit();) ) 
                           ^